--- a/public/styles.css
+++ b/public/styles.css
@@ -124,3 +124,23 @@ input[type="number"] {
     color: #ff4d4d;
     /* Bright red */
 }
+
+.leader-section {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.leader-section input[type="text"] {
+    margin-right: 10px;
+    padding: 4px;
+}
+
+.leader-section {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#attackerLeaderCheckboxContainer,
+#defenderLeaderCheckboxContainer {
+    margin-top: 5px;
+}
